Elastic DAO integraiton tests completed